--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <div class="container">
     <div class="card">
-     <h2>Md. Zakir</h2>
+        <div class="imgbx">
+            <img src="man.jpg">
+        </div>
     </div>
     </div>
 </body>
