--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-    <div class="card">
+    <div class="cards">
         <div class="imgbx">
             <img src="man.jpg">
         </div>
