--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 </head>
 <body>
+    <!---container start-->
     <div class="container">
+        <!---jhon doe start---->
     <div class="cards">
         <div class="imgbx">
             <img src="man.jpg">
@@ -26,8 +28,11 @@
            </div>
         </div>
     </div>
+    <!---jhon doe end-->
 
 
+
+    <!---Marry queen start-->
     <div class="cards">
         <div class="imgbx">
             <img src="women1.jpeg">
@@ -44,7 +49,10 @@
            </div>
         </div>
     </div>
+    <!---Mary Queen end-->
 
+
+    <!----Henry maken start-->
     <div class="cards">
         <div class="imgbx">
             <img src="women2.jpeg">
@@ -61,7 +69,9 @@
            </div>
         </div>
     </div>
+    <!---Henry Maken end-->
 
+    <!---Luka modrik start-->
     <div class="cards">
         <div class="imgbx">
             <img src="man3.jpeg">
@@ -78,6 +88,8 @@
            </div>
         </div>
     </div>
+    <!---Luka Modrik end-->
     </div>
+    <!----container end-->
 </body>
 </html>
