add nee comment

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!---jhon doe start---->
     <div class="cards">
         <div class="imgbx">
-            <img src="man.jpg">
+            <img src="man.png">
         </div>
         <div class="content">
             <div class="details">
