--- a/index.html
+++ b/index.html
@@ -6,12 +6,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>card work</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 </head>
 <body>
     <div class="container">
     <div class="cards">
         <div class="imgbx">
             <img src="man.jpg">
+        </div>
+        <div class="content">
+            <div class="details">
+                <h2>Jhon Doe <br><span>Senior web developers</span></h2>
+                <ul class="social-icon">
+                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                </ul>
+           </div>
+        </div>
+    </div>
+
+
+    <div class="cards">
+        <div class="imgbx">
+            <img src="women1.jpeg">
+        </div>
+        <div class="content">
+            <div class="details">
+                <h2>Marry Queen <br><span>Senior web developers</span></h2>
+                <ul class="social-icon">
+                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                </ul>
+           </div>
+        </div>
+    </div>
+
+    <div class="cards">
+        <div class="imgbx">
+            <img src="women2.jpeg">
+        </div>
+        <div class="content">
+            <div class="details">
+                <h2>Henry Maken <br><span>Senior web developers</span></h2>
+                <ul class="social-icon">
+                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                </ul>
+           </div>
+        </div>
+    </div>
+
+    <div class="cards">
+        <div class="imgbx">
+            <img src="man3.jpeg">
+        </div>
+        <div class="content">
+            <div class="details">
+                <h2>Luka Modeick <br><span>Senior web developers</span></h2>
+                <ul class="social-icon">
+                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                </ul>
+           </div>
         </div>
     </div>
     </div>
